--- a/app/templates/_dashboard_wow.html
+++ b/app/templates/_dashboard_wow.html
@@ -1,5 +1,5 @@
 {# templates/dashboard_wow.html #}
-{% extends "coreui_base_wow.html" %}
+{% extends "coreui_base_wow_origin.html" %}
 <!-- DEMO: run flask, then go to: http://127.0.0.1:5000/ui/wow/dashboard -->
 
 {% block title %}AMS – Dashboard{% endblock %}
