sorting repaired but formatting is now weird

--- a/app/templates/coreui_base_wow.html
+++ b/app/templates/coreui_base_wow.html
@@ -278,6 +278,10 @@
       </footer>
     </div>
 
+    <!-- 1. jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+
     <!-- CoreUI, etc scripts -->
 
     <!-- CoreUI + vendors JS -->
