--- a/app/templates/point_inputs.html
+++ b/app/templates/point_inputs.html
@@ -70,7 +70,7 @@
       <thead>
         <tr>
           {% for header in headers %}
-            <th onclick='sortTable(4)'>{{ header }}</th>
+            <th>{{ header }}</th>
           {% endfor %}
         </tr>
       </thead>
@@ -97,18 +97,19 @@
 
 {% block scripts %}
 <script>
-  const getCellValue = (tr, idx) => tr.children[idx].innerText || tr.children[idx].textContent;
+  //https://stackoverflow.com/questions/14267781/sorting-html-table-with-javascript
+const getCellValue = (tr, idx) => tr.children[idx].innerText || tr.children[idx].textContent;
 
-  const comparer = (idx, asc) => (a, b) => ((v1, v2) => 
-      v1 !== '' && v2 !== '' && !isNaN(v1) && !isNaN(v2) ? v1 - v2 : v1.toString().localeCompare(v2)
-      )(getCellValue(asc ? a : b, idx), getCellValue(asc ? b : a, idx));
+const comparer = (idx, asc) => (a, b) => ((v1, v2) => 
+    v1 !== '' && v2 !== '' && !isNaN(v1) && !isNaN(v2) ? v1 - v2 : v1.toString().localeCompare(v2)
+    )(getCellValue(asc ? a : b, idx), getCellValue(asc ? b : a, idx));
 
-  // do the work...
-  document.querySelectorAll('th').forEach(th => th.addEventListener('click', (() => {
-      const table = th.closest('table');
-      Array.from(table.querySelectorAll('tr:nth-child(n+2)'))
-          .sort(comparer(Array.from(th.parentNode.children).indexOf(th), this.asc = !this.asc))
-          .forEach(tr => table.appendChild(tr) );
-  })));
+// do the work...
+document.querySelectorAll('th').forEach(th => th.addEventListener('click', (() => {
+    var table = th.closest('table');
+    Array.from(table.querySelectorAll('tr:nth-child(n+2)'))
+        .sort(comparer(Array.from(th.parentNode.children).indexOf(th), this.asc = !this.asc))
+        .forEach(tr => table.appendChild(tr) );
+})));
 </script>
 {% endblock %}
