--- a/app/templates/point_inputs.html
+++ b/app/templates/point_inputs.html
@@ -14,7 +14,7 @@
 
 <!-- Filtering Form -->
 <form method="get" action="{{ url_for('main.point_inputs') }}" class="row g-3 mb-4">
-  
+
   <!-- Filter Field Dropdown -->
   <div class="col-md-4">
     <label for="filter_field" class="form-label">Filter by:</label>
@@ -64,41 +64,44 @@
 </div>
 
 <!-- Table -->
-<div class="card mt-4">
-  <div class="card-body">
-    <table id="data" class="table table-striped align-middle">
-      <thead>
-        <tr>
-          {% for header in headers %}
-            <th>{{ header }}</th>
+<div class="card">
+  <div class="card-body p-0">
+    <div class="table-responsive">
+      <table id="studentsTable" class="table table-striped table-hover datatable w-100">
+        <thead>
+          <tr>
+            {% for h in headers %}
+              <th>{{ h }}</th>
+            {% endfor %}
+          </tr>
+        </thead>
+        <tbody>
+          {% for r in records %}
+            <tr>
+              {% for h in headers %}
+                <td>{{ r[h] }}</td>
+              {% endfor %}
+            </tr>
           {% endfor %}
-        </tr>
-      </thead>
-      <tbody>
-        {% for record in records %}
-        <tr>
-          {% for header in headers %}
-            {% if header == 'id' %}
-              <td><a href="{{ url_for('main.student_details', id_query=record[header]) }}">{{ record[header] }}</a></td>
-            {% else %}
-              {% if record[header] != 'nan' %}
-                <td>{{ record[header] }}</td>
-              {% endif %}
-            {% endif %}
-          {% endfor %}
-        </tr>
-        {% endfor %}
-      </tbody>
-    </table>
+        </tbody>
+      </table>
+    </div>
   </div>
 </div>
+
 
 {% endblock %}
 
 {% block scripts %}
 <script>
-  $(document).ready(function () {
-    $('#data').DataTable();
+  document.addEventListener('DOMContentLoaded', () => {
+    initDatatables('#studentsTable');  
+
+    const table = document.querySelector('#studentsTable');
+    if (table && table._dt) {
+     
+      table._dt.order([[0, 'asc']]).draw();
+    }
   });
 </script>
 {% endblock %}
